ADD: Kata 1 solved